--- a/job-board/client/package.json
+++ b/job-board/client/package.json
@@ -7,7 +7,9 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "apollo-server-express": "^3.7.0",
     "bulma": "^0.9.3",
+    "graphql": "^16.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
