--- a/job-board/client/package.json
+++ b/job-board/client/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
     "apollo-server-express": "^3.7.0",
     "bulma": "^0.9.3",
     "graphql": "^16.5.0",
